fix qa section on mobile

--- a/styles/typographics.css
+++ b/styles/typographics.css
@@ -62,7 +62,8 @@ P { max-width: var(--max-width-p); }
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		width: 560px;
+		max-width: 560px;
+		font-size: 16px;
 		gap: 0.2em;
 		--r: 1em;
 	}
